# Ghanshyam_Babariya_

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-results.yml
configs/: README.md  grinding_20khz.json
data/processed/: grinding_window_features.csv
notebooks/01_analysis/: README.md
notebooks/02_feature_engineering/: README.md
notebooks/03_ml_models/: README.md
notebooks/04_sequence_models/: README.md
reports/: real_run_results.json
scripts/: run_real_pipeline.py
src/hf_sensor_ml/: __init__.py  config.py
src/hf_sensor_ml/pipelines/: __init__.py  analysis.py  classical_ml.py  feature_engineering.py  sequence_models.py
src/hf_sensor_ml/utils/: io.py  simulated_data.py
